Generate go client.
